# functorial-narrative-analysis

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  REPLICATION.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: README.md  article_falsifiability_icc.md  category_narr.md  discovered_patterns.md  falsifiability.md  icc_model.md  information-geometry.md  insights_for_writers_and_readers.md  kishotenketsu-detector.md  laska_perspective_analysis.md  research_milestone_compound_icc.md  translation_divergence_report.md  writing_guide_cat_perspective.md
notebooks/: tutorial.ipynb
output/war_and_peace_sections/: first_epilogue.txt  full_text.txt  main_text.txt  second_epilogue.txt
output/web/: comparison.html  comparison_2d.html  war_and_peace_sections.html  war_and_peace_trajectories.html
scripts/: analyze_any_text.py  analyze_chinese_corpus.py  analyze_narrative.py  author_genre_analysis.py  compare_semantic_translations.py  compare_translations.py  compound_sentiment_viz.py  compound_vs_shapes.py  convert_chinese_ect.py  derive_compound_icc.py  download_arabic_texts.py  download_chinese_texts.py  download_corpus_external.py  download_russian_texts.py  generate_web.py  multi_functor_analysis.py  reclassify_and_expand.py  visualize_character_orbits.py  visualize_chinese.py  visualize_dual_narrative.py  visualize_multi_functor.py  visualize_narrative.py  visualize_semantic_functors.py  writer_cli.py
src/: __init__.py  cli.py
src/analysis/: falsifiability.py  multiscale.py  pattern_discovery.py  statistical_validation.py  unified_detector.py
src/categories/: __init__.py  integration.py  narr.py  natural_transformations.py
src/clustering/: __init__.py  dtw_clustering.py
src/corpus/: __init__.py  aozora.py  gutenberg.py  huggingface.py  large_corpus.py  preprocess.py  syosetu.py
src/detectors/: __init__.py  aristotle.py  campbell.py  compound_icc.py  freytag.py  freytag_pyramid.py  harmon_circle.py  heros_journey.py  icc.py  kishotenketsu.py  reagan_shapes.py  three_act.py
src/extraction/: __init__.py  dynamic_characters.py
src/functors/: __init__.py  arabic_sentiment.py  arousal.py  base.py  character_presence.py  chinese_sentiment.py  entropy.py  epistemic.py  japanese_sentiment.py  narrative_voice.py  pacing.py  russian_sentiment.py  semantic_tracking.py  sentiment.py  sentiment_ja.py  thematic.py
src/geometry/: __init__.py  curvature.py  divergence.py  surprisal.py
src/ml/: shape_classifier.py
src/visualization/: __init__.py  cluster_plots.py  geometry_plots.py  interactive.py  plot_trajectory.py  style.py
